force-app/main/default/objects/Test_Scenario_PMT__c/Test_Scenario_PMT__c.object-meta.xml
<CustomObject>
    <label>Test Scenario</label>
    <nameField>
        <label>Test Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>