force-app/main/default/objects/Test_Scenario_PMT__c/fields/Release_PMT__c.field-meta.xml
<CustomField>
    <fullName>Release_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Test Scenario</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>