force-app/main/default/objects/Test_Scenario_PMT__c/fields/Status_PMT__c.field-meta.xml
<CustomField>
    <fullName>Status_PMT__c</fullName>
    <formula>IF( Total_Test_Script_PMT__c == 0,&quot;&quot;, IF( AND( Total_Test_Script_Failed_PMT__c ==0,  Total_test_passed_PMT__c  + Total_Test_Script_Others_PMT__c == Total_Test_Script_PMT__c ) , &quot;Passed&quot;,  IF( AND( Total_Test_Script_Failed_PMT__c ==0, Total_test_passed_PMT__c + Total_Test_Script_Others_PMT__c &lt; Total_Test_Script_PMT__c ) , &quot;In Progress&quot;,  IF( AND( Total_test_passed_PMT__c+ Total_Test_Script_Others_PMT__c &lt; Total_Test_Script_PMT__c  ,  Total_Test_Script_Failed_PMT__c &gt;0 ) , &quot;In Progress With Failure&quot;,  IF( Total_Test_Script_Failed_PMT__c &gt;1, &quot;Failed&quot;, &quot;&quot;) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>