force-app/main/default/objects/Test_Scenario_PMT__c/fields/Template_Version_PMT__c.field-meta.xml
<CustomField>
    <fullName>Template_Version_PMT__c</fullName>
    <label>Template Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>