force-app/main/default/objects/Test_Scenario_PMT__c/fields/Test_Iteration_PMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Iteration_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Iteration</label>
    <referenceTo>Test_Iteration__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>