force-app/main/default/objects/Test_Scenario_PMT__c/fields/Total_test_passed_PMT__c.field-meta.xml
<CustomField>
    <fullName>Total_test_passed_PMT__c</fullName>
    <label>Total Test Script Passed</label>
    <summaryFilterItems>
        <field>Test_Script_PMT__c.Status_PMT__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Script_PMT__c.Test_Scenario_PMT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>