force-app/main/default/objects/Test_Scenario_PMT__c/fields/Total_Test_Script_PMT__c.field-meta.xml
<CustomField>
    <fullName>Total_Test_Script_PMT__c</fullName>
    <label>Total Test Script</label>
    <summaryForeignKey>Test_Script_PMT__c.Test_Scenario_PMT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>