force-app/main/default/objects/Test_Scenario_PMT__c/recordTypes/Execution_PMT.recordType-meta.xml
<RecordType>
    <fullName>Execution_PMT</fullName>
    <active>true</active>
    <label>Execution</label>
</RecordType>