force-app/main/default/objects/Test_Scenario_PMT__c/recordTypes/Template_PMT.recordType-meta.xml
<RecordType>
    <fullName>Template_PMT</fullName>
    <active>true</active>
    <label>Template</label>
</RecordType>